codama-macros/tests/node_attribute/public_key_type_node_with_input.fail.stderr
error: publicKeyTypeNode does not accept any input
 --> tests/node_attribute/public_key_type_node_with_input.fail.rs:3:8
  |
3 | #[node(publicKeyTypeNode(foo = 42))]
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
